# a2a-agent-bridge

./: Containerfile  README.md  requirements.txt
.github/workflows/: container.yaml
a2a-agent-bridge/: server.py
a2a-mcp-bridge/: README.md  pyproject.toml
a2a-mcp-bridge/src/a2a_mcp_bridge/: __init__.py  server.py
