[project]
name = "a2a-mcp-bridge"
version = "0.1.0"
description = "MCP server for sending and inspecting A2A agent messages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "mcp[cli]>=1.2.0",
]

[project.scripts]
a2a-mcp-bridge = "a2a_mcp_bridge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
